側邊列目標修正

--- a/templates/mail/admin_list.html
+++ b/templates/mail/admin_list.html
@@ -7,7 +7,7 @@
             <i class="material-icons mid-icon brand-text-color">mail</i>
         </div>
         <h2>郵件寄送樣版</h2>
-        設定網站在寄送郵件時所使用的文本樣版。 <a href="{{ uri("admin:mail:mail:reset_mail_list") }}" target="aside_iframe">重置所有的樣版</a>
+        設定網站在寄送郵件時所使用的文本樣版。 <a href="{{ uri("admin:mail:mail:reset_mail_list") }}" target="aside_area">重置所有的樣版</a>
         {% if last_record_date %}<span class="text-muted small pull-right visible-sm visible-md visible-lg">最後更新：<i class="icon">access_time</i> {{ print_value(last_record_date) }}</span>{% endif %}
     </div>
 </div>
