--- a/templates/mail/config.html
+++ b/templates/mail/config.html
@@ -1,6 +1,6 @@
 {% extends "backend/config.html" %}
-{% block layout_before_content %}
-<div class="ibox-content m-b-sm border-bottom">
+{% block page_big_header %}
+<div class="ibox-content m-b-sm border-bottom page-big-header">
     <div class="p-xs">
         <div class="pull-left m-r-md">
             <i class="material-icons mid-icon brand-text-color">mail</i>
@@ -14,14 +14,16 @@
         {% if last_record_date %}<span class="text-muted small pull-right visible-sm visible-md visible-lg">最後更新：<i class="icon">access_time</i> {{ print_value(last_record_date) }}</span>{% endif %}
     </div>
 </div>
+{% endblock %}
+
+{% block page_helper %}
 <ul>
     <li>Google App Engine 每日可寄送 100 封(收件人)，需至 <a href="https://console.cloud.google.com/appengine/settings?project={{ application_id }}" target="_blank">Google Cloud</a> 設定為 Email API 授權的寄件者。</li>
     <li>Mial Gun 每月可免費寄送 10,000 封信件，請至 <a href="https://www.mailgun.com/" target="_blank">Mial Gun</a> 申請相關 Api Key。</li>
 </ul>
 {% endblock %}
 
-
-{% block layout_scripts %}
+{% block page_scripts %}
 <script type="text/javascript">
     (function(page){
         page.init = function(){
